--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title>Nosaukums</title>
   </head>
   <body>
-    <h1>Virsraksts</h1>
+    
+    <h1 style="font-size:10vw">Virsraksts</h1>
     <p>Rindkopa</p>
+    
   </body>
 </html> 
