--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   </head>
   <body>
     
-    <h1 style="font-size:10vw">Virsraksts</h1>
-    <p>Rindkopa</p>
+    <h1 style="font-size:10vw" color="red">Elijs </h>
+    <p> style="font-size:10vw" color="blue">Elans </p>
     
   </body>
 </html> 
