--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <body>
     
     <h1 style="font-size:10vw" color="red">Elijs </h>
-    <p> style="font-size:10vw" color="blue">Elans </p>
+    <p style="font-size:10vw" color="blue">Elans </p>
+    <br> ilaist </br>
     
   </body>
 </html> 
