--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   </head>
   <body>
     
-    <h1 style="font-size:10vw" color="red">Elijs </h>
-    <p style="font-size:10vw" color="blue">Elans </p>
+    <h1 style="font-size:10vw">Elijs </h>
+    <p style="font-size:2vw""> Elans </p>
     <br> ilaist </br>
     
   </body>
